--- a/checkout-6.html
+++ b/checkout-6.html
@@ -886,7 +886,7 @@
             <div class="set mt-0">
               <div class="row">
                 <div class="col-lg-12">
-                  <div class="heading">
+                  <div class="intros">
                     <h5>Property & owner details</h5>
                     <button type="button" class="edit">
                       <i class="fas fa-pencil-alt"></i> edit
@@ -894,8 +894,8 @@
                   </div>
                 </div>
               </div>
-              <div class="form-box">
-                <div class="row mb-32">
+              <div class="form-box personal">
+                <div class="row m-16">
                   <div class="col-lg-4">
                     <p class="titles">Your Name*</p>
                   </div>
@@ -903,7 +903,7 @@
                     <h6>Rizu</h6>
                   </div>
                 </div>
-                <div class="row mb-32">
+                <div class="row m-16">
                   <div class="col-lg-4">
                     <p class="titles">Your Email*</p>
                   </div>
@@ -911,7 +911,7 @@
                     <h6>rizumaruf@amra.ak</h6>
                   </div>
                 </div>
-                <div class="row mb-32">
+                <div class="row m-16">
                   <div class="col-lg-4">
                     <p class="titles">Phone Number*</p>
                   </div>
@@ -919,7 +919,7 @@
                     <h6>0123456789</h6>
                   </div>
                 </div>
-                <div class="row mb-32">
+                <div class="row m-16">
                   <div class="col-lg-4">
                     <p class="titles">Ceiling Height</p>
                   </div>
@@ -927,7 +927,7 @@
                     <h6>11 ft.</h6>
                   </div>
                 </div>
-                <div class="row mb-32">
+                <div class="row m-16">
                   <div class="col-lg-4">
                     <p class="titles">Property Adress</p>
                   </div>
@@ -944,7 +944,7 @@
             <div class="set">
               <div class="row">
                 <div class="col-lg-12">
-                  <div class="heading">
+                  <div class="intros">
                     <h5>Property & owner details</h5>
                     <button type="button" class="edit">
                       <i class="fas fa-pencil-alt"></i> edit
@@ -952,7 +952,7 @@
                   </div>
                 </div>
               </div>
-              <div class="row">
+              <div class="row item">
                 <div class="col-lg-4">
                   <div class="img-box">
                     <span class="img-area"
@@ -968,7 +968,7 @@
                 </div>
                 <div class="col-lg-8">
                   <div class="form-box">
-                    <div class="row mb-32">
+                    <div class="row m-16">
                       <div class="col-lg-4">
                         <p class="titles">Room Type*</p>
                       </div>
@@ -976,7 +976,7 @@
                         <h6>bedroom</h6>
                       </div>
                     </div>
-                    <div class="row mb-32">
+                    <div class="row m-16">
                       <div class="col-lg-4">
                         <p class="titles">Add ons</p>
                       </div>
@@ -993,7 +993,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="row mb-32">
+                    <div class="row m-16">
                       <div class="col-lg-4">
                         <p class="titles">reference</p>
                       </div>
@@ -1029,7 +1029,99 @@
                         </div>
                       </div>
                     </div>
-                    <div class="row mb-32">
+                    <div class="row m-16">
+                      <div class="col-lg-4">
+                        <p class="titles">description</p>
+                      </div>
+                      <div class="col-lg-7">
+                        <p class="description">
+                          Lorem ipsum dolor sit, amet consectetur adipisicing
+                          elit. Doloremque aliquid odit eveniet cumque illo,
+                          iure voluptas perferendis? Delectus, iusto neque!
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row item">
+                <div class="col-lg-4">
+                  <div class="img-box">
+                    <span class="img-area"
+                      ><img
+                        src="./images/ch-img.png"
+                        alt="ch-img.png"
+                        class="img-fluid"
+                    /></span>
+                    <span class="text-area">
+                      <h6>ch-img.jpg</h6>
+                    </span>
+                  </div>
+                </div>
+                <div class="col-lg-8">
+                  <div class="form-box">
+                    <div class="row m-16">
+                      <div class="col-lg-4">
+                        <p class="titles">Room Type*</p>
+                      </div>
+                      <div class="col-lg-7">
+                        <h6>bedroom</h6>
+                      </div>
+                    </div>
+                    <div class="row m-16">
+                      <div class="col-lg-4">
+                        <p class="titles">Add ons</p>
+                      </div>
+                      <div class="col-lg-7">
+                        <div class="row">
+                          <div class="col-lg-12">
+                            <h6>Change wall color - ₹ 10</h6>
+                          </div>
+                        </div>
+                        <div class="row">
+                          <div class="col-lg-12">
+                            <h6>Change wall color - ₹ 10</h6>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row m-16">
+                      <div class="col-lg-4">
+                        <p class="titles">reference</p>
+                      </div>
+                      <div class="col-lg-6">
+                        <div class="row">
+                          <div class="col-lg-4 px-1">
+                            <div class="refer_img">
+                              <img
+                                src="./images/previous2.jpg"
+                                alt="previous2"
+                                class="img-fluid"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-lg-4 px-1">
+                            <div class="refer_img">
+                              <img
+                                src="./images/previous2.jpg"
+                                alt="previous2"
+                                class="img-fluid"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-lg-4 px-1">
+                            <div class="refer_img">
+                              <img
+                                src="./images/previous2.jpg"
+                                alt="previous2"
+                                class="img-fluid"
+                              />
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row m-16">
                       <div class="col-lg-4">
                         <p class="titles">description</p>
                       </div>
