--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-        <!-- <meta name="theme-color" content="#000000" /> -->
-        <meta name="description" content="Interior Design Web Application. Designed and Developed by Maruf, Alem and Mujahid. The Desgine was converted from Figma, then Developed with React and React-Helmet, Context API, Router, Media-Breakpoint Observer, Slick Slider, Bootstrap any many sweet things." />
-        <meta name="author" content="Maruf; Aleam; Mujahid">
-        <meta property="og:description"
-            content="Interior Design Web Application. Designed and Developed by Maruf, Alem and Mujahid. The Desgine was converted from Figma, then Developed with React and React-Helmet, Context API, Router, Media-Breakpoint Observer, Slick Slider, Bootstrap any many sweet things.">
-        <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-        <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+  <head>
+    <meta charset="utf-8" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <!-- <meta name="theme-color" content="#000000" /> -->
+    <meta
+      name="description"
+      content="Interior Design Web Application. Designed and Developed by Maruf, Alem and Mujahid. The Desgine was converted from Figma, then Developed with React and React-Helmet, Context API, Router, Media-Breakpoint Observer, Slick Slider, Bootstrap any many sweet things."
+    />
+    <meta name="author" content="Maruf; Aleam; Mujahid" />
+    <meta
+      property="og:description"
+      content="Interior Design Web Application. Designed and Developed by Maruf, Alem and Mujahid. The Desgine was converted from Figma, then Developed with React and React-Helmet, Context API, Router, Media-Breakpoint Observer, Slick Slider, Bootstrap any many sweet things."
+    />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <!--
+ Interior Design Web Application | Developed By Maruf And Alem
     -->
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-        <style>
-            :root{
-                --main:#3441f1;
-            }
-        </style>
-        <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <style>
+      :root {
+        --main: #3441f1;
+      }
+    </style>
+    <!--
+      Interior Design Web Application | Developed By Maruf And Alem
     -->
-        <title>Interior Design Web Application</title>
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-    </body>
+    <title>Interior Design Web Application | Developed By Maruf And Alem</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
